render my 3 services thru proxy

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <div id="app"></div>
+    <div id="comments"></div>
+    <div id="hashtags"></div>
+    <div id="users"></div>
+
+    <script src='http://localhost:9000/main.js'></script>
+    <script src='http://localhost:9001/main.js'></script>
+    <script src='http://localhost:9002/main.js'></script>
 </body>
 </html>
