--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,18 @@
 </head>
 <body>
     <div id="app"></div>
+    <div id="related"></div>
     <div id="comments"></div>
     <div id="hashtags"></div>
     <div id="users"></div>
+    <div id="artist-bio"></div>
+    <div id="frankie-player"></div>
 
     <script src='http://localhost:9000/main.js'></script>
     <script src='http://localhost:9001/main.js'></script>
     <script src='http://localhost:9002/main.js'></script>
+    <script src='http://localhost:3001/bundle.js'></script>
+    <script src='http://localhost:2000/bundle.js'></script>
+    <script src='http://localhost:1000/bundle.js'></script>
 </body>
 </html>
