--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
     <script src='http://3.19.209.147:4001/main.js'></script>
     <script src='http://3.16.151.4:4002/main.js'></script>
     <script src='http://3.15.220.99:3001/bundle.js'></script>
-    <script src='http://localhost:2000/bundle.js'></script>
-    <script src='http://localhost:1000/bundle.js'></script>
+    <!-- <script src='http://localhost:2000/bundle.js'></script>
+    <script src='http://localhost:1000/bundle.js'></script> -->
 
     <!-- local host links -->
     <!-- <script src='http://localhost:4000/main.js'></script>
