--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,21 @@
     <title>app</title>
 </head>
 <body>
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
+    <div id="frankie-player"></div>
+    <div id="hashtags"></div>
     <div id="related"></div>
     <div id="comments"></div>
-    <div id="hashtags"></div>
     <div id="users"></div>
     <div id="artist-bio"></div>
-    <div id="frankie-player"></div>
+
 
     <script src='http://52.14.128.124:4000/main.js'></script>
     <script src='http://18.189.26.97:4001/main.js'></script>
     <script src='http://18.218.58.9:4002/main.js'></script>
     <script src='http://3.15.220.99:3001/bundle.js'></script>
+    <script src='http://34.220.154.45:2000/bundle.js'></script>
+    <script src='http://52.37.102.63:3005/bundle.js'></script>
     <!-- <script src='http://localhost:2000/bundle.js'></script>
     <script src='http://localhost:1000/bundle.js'></script> -->
 
